# agrimate_sim

./: .gitmodules  README.md
agrimate_ws/src/agrimate/: arbol.blend  franjas.avif  vineyard.mtl  vineyardJoel.blend  vineyardJoel.blend1
agrimate_ws/src/agrimate/robotnik_agrimate/: CMakeLists.txt  README.md  package.xml
agrimate_ws/src/agrimate/robotnik_agrimate/hooks/: robotnik_agrimate.sh.in
agrimate_ws/src/agrimate/robotnik_agrimate/launch/: simulation.launch.py
agrimate_ws/src/agrimate/robotnik_agrimate/models/: arbol.mtl
agrimate_ws/src/agrimate/robotnik_agrimate/models/template_blender_model/: model.blend  model.blend1  model.config  model.mtl  model.sdf
agrimate_ws/src/agrimate/robotnik_agrimate/models/template_blender_model/source/: model.mtl
agrimate_ws/src/agrimate/robotnik_agrimate/worlds/: test.world
agrimate_ws/src/robotnik/robotnik_simulation/: Dockerfile  README.md  docker-compose.yaml  robotnik_simulation.humble.repos
agrimate_ws/src/robotnik/robotnik_simulation/.gitA/: HEAD  config  index  packed-refs
agrimate_ws/src/robotnik/robotnik_simulation/common/robotnik_simulation_localization/: CMakeLists.txt
agrimate_ws/src/robotnik/robotnik_simulation/common/robotnik_simulation_localization/config/: amcl.yaml
agrimate_ws/src/robotnik/robotnik_simulation/common/robotnik_simulation_localization/launch/: localization_2d.launch.py
agrimate_ws/src/robotnik/robotnik_simulation/common/robotnik_simulation_localization/launch/utils/: save_map.launch.py
agrimate_ws/src/robotnik/robotnik_simulation/common/robotnik_simulation_localization/maps/electrical_substation_map/: electrical_substation_map.yaml
agrimate_ws/src/robotnik/robotnik_simulation/debs/: ros-humble-robotnik-common-msgs_1.1.0-20250825.162558-e5e07b8_amd64.deb  ros-humble-robotnik-controllers-msgs_1.1.0-20250825.162609-e5e07b8_amd64.deb  ros-humble-robotnik-controllers_1.3.0-20250825.162620-3e8626a_amd64.deb  (+3 more)
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/: CMakeLists.txt  README.md  package.xml
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/config/: rviz_config.rviz
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/config/nav2/: bt_navigator.yaml  controller_server.yaml  nav2_params.yaml  route_server.yaml  slam_params (Copy).yaml  slam_params.yaml  smoother_server.yaml  waypoint_follower.yaml
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/config/profile/rbfiqus/: ros2_control.yaml  ros2_control_agrimate.yaml  ros2_control_normal.yaml
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/launch/: spawn_robot.launch (Copy).py  spawn_robot.launch.py  spawn_world.launch.py
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/models/gz_warehouse/: NOTES
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/models/robotnik_charging_station/: model.sdf
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/models/robotnik_charging_station/material/scripts/: marker1_border_12cm.material
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/models/warehouse_simple/: model.config  model.sdf
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/scripts/: multiple.sh
agrimate_ws/src/robotnik/robotnik_simulation/robotnik_gazebo_ignition/worlds/: empty.world  lightweight_scene.world
agrimate_ws/src/robotniks/robotnik_description/: CHANGELOG.rst  README.md
agrimate_ws/src/robotniks/robotnik_sensors/: README.md
agrimate_ws/src/robotniks/robotnik_simulation/: entrypoint.sh  robotnik_simulation.jazzy.repos
agrimate_ws/src/robotniks/robotnik_simulation/common/robotnik_simulation_bringup/: CMakeLists.txt  package.xml
agrimate_ws/src/ur_description/: CMakeLists.txt
(+85 files in other folders)
