<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotnik_gazebo_ignition</name>
  <version>1.0.0</version>
  <description>Package to simulate robots in Gazebo</description>
  <maintainer email="ros-developers@robotnik.es">Robotnik Developers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>rqt_joint_trajectory_controller</depend>

  <exec_depend>robotnik_description</exec_depend>
  <exec_depend>robotnik_sensors</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
